# template-self-hosted

./: .gitignore  README.md
client/: package-lock.json  package.json
server/: pyproject.toml
server/server/: auth.py  main.py
server/server/app/models/: user.py
server/server/routes/: health.py  login.py
